Fix ambigous text

--- a/src/notation/view/widgets/editstyle.ui
+++ b/src/notation/view/widgets/editstyle.ui
@@ -11241,7 +11241,7 @@
                  <item row="3" column="4">
                   <widget class="QLabel" name="label_minDistance">
                    <property name="text">
-                    <string>Min. gap between lyrics:</string>
+                    <string>Min. gap between syllables/words:</string>
                    </property>
                    <property name="buddy">
                     <cstring>lyricsMinDistance</cstring>
@@ -11592,7 +11592,7 @@
                     <string>Reset to default</string>
                    </property>
                    <property name="accessibleName">
-                    <string>Reset 'Min. distance' value</string>
+                    <string>Reset 'Min. gap between syllables/words' value</string>
                    </property>
                    <property name="text">
                     <string notr="true"/>
